--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="clckd" content="b9d7ed93582cc54af141fd017204c1d8" />
   <meta name="504c6a9ad442f793be6a4d16d4832b63a16c7397" content="504c6a9ad442f793be6a4d16d4832b63a16c7397" />
   <title>Dana Kaget | Klaim Sekarang</title>
   <script src="https://cdn.tailwindcss.com"></script>
